fix layout bugs with android

--- a/style.css
+++ b/style.css
@@ -410,6 +410,7 @@ div.socials{
 
     div.block {
         width: 60vw;
+        height: 30vh;
     }
 
     div.menu h1 {
@@ -428,18 +429,18 @@ div.socials{
     }
 
     div.menu-img{
-        width: 700px;
-        height: 700px;
+        /* width: 500px; */
+        height: 500px;
         display: flex;
-        /* justify-content: center; */
+        justify-content: center;
         /* align-items: center; */
     }
 
     div.menu-container img{
-        width: 400px;
-        height: 400px;
+        width: 300px;
+        height: 300px;
         align-self: center;
-        margin-top: 40px;
+        /* margin-top: 40px; */
         /* order: -1; */
     }
 
@@ -454,6 +455,7 @@ div.socials{
         width: 90vw;
         margin-left: 5vw;
         margin-right: 5vw;
+        margin-top: 30px;
     }
 
     div.feedback-block {
